--- a/cfg/uartConfig.h.in
+++ b/cfg/uartConfig.h.in
@@ -1,5 +1,9 @@
 #include "hardware/uart.h"
 
+#define uart_inst uart0
+#define UART_TX_PIN 0 // 0 or 16
+#define UART_RX_PIN 1 // 1 or 17
+
 #cmakedefine UART_BAUDRATE @UART_BAUDRATE@
 #cmakedefine UART_DATABITS @UART_DATABITS@
 #cmakedefine UART_PARITY @UART_PARITY@
@@ -25,3 +29,4 @@
 #else
     #define UART_PARITY uart_parity_t::UART_PARITY_NONE
 #endif
+
