Add first test and src files for i2c Bridge

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -53,21 +53,32 @@ target_link_libraries(SerialUartBridge
 
 
 
-# Build second executable uartMirror for testing SerialUartBridge
-
-set (UART_MIRROR_USE_STDIO 0)
-set (UART_MIRROR_WAIT_FOR_NEWLINE 0)
-set (UART_MIRROR_ADD_INFO 1)
-
-
-add_executable(uartMirror
-	test/uartMirror.cpp
+# Another executable for I2c
+add_executable(SerialI2CBridge
+        src/SerialI2CBridge.cpp
 )
 
-target_compile_options(uartMirror PRIVATE
-	-DUSE_STDIO=${UART_MIRROR_USE_STDIO}
-	-DWAIT_FOR_NEWLINE=${UART_MIRROR_WAIT_FOR_NEWLINE}
-	-DADD_INFO=${UART_MIRROR_ADD_INFO}
+configure_file(cfg/i2cConfig.h.in cfg/i2cConfig.h)
+
+target_include_directories(SerialI2CBridge PRIVATE
+	 ${CMAKE_CURRENT_BINARY_DIR} ${CMAKE_SOURCE_DIR})
+
+#target_compile_options(SerialI2C PRIVATE
+#	-DWAIT_FOR_NEWLINE=${UART_SERIAL_WAIT_FOR_NEWLINE}
+#)
+
+pico_enable_stdio_usb(SerialI2CBridge 1)
+#pico_enable_stdio_uart(SerialI2CBridge 0)
+
+# create map/bin/hex/uf2 files.
+pico_add_extra_outputs(SerialI2CBridge)
+
+target_link_libraries(SerialI2CBridge
+    hardware_i2c
+	pico_multicore
+	pico_stdlib
+	hardware_gpio
+	$<$<STREQUAL:${PICO_BOARD},pico_w>:pico_cyw43_arch_none>
 )
 
 
